Add splash screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,15 +15,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.PLActivity"></activity>
-        <activity android:name=".activity.CurrentSongActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".activity.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.PLActivity" />
+        <activity android:name=".activity.CurrentSongActivity" />
+        <activity android:name=".activity.MainActivity"/>
     </application>
 
 </manifest>
