--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <permission android:name="android.permission.MEDIA_CONTENT_CONTROL" />
 
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
     <application
         android:allowBackup="true"
@@ -26,6 +27,10 @@
         <activity android:name=".activity.PLActivity" />
         <activity android:name=".activity.CurrentSongActivity" />
         <activity android:name=".activity.MainActivity" />
+
+        <service
+            android:name=".service.MusicService"
+            android:enabled="true" />
     </application>
 
 </manifest>
