--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.UserInfoActivity"></activity>
+        <activity android:name=".activity.SignupActivity"></activity>
+        <activity android:name=".activity.UserInfoActivity" />
         <activity android:name=".activity.ArtistDetailActivity" />
         <activity android:name=".activity.AlbumDetailActivity" />
         <activity
